# cull

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml
src/: config.rs  fixtures.rs  lib.rs  main.rs  meta.rs  moves.rs  paths.rs  server.rs  walk.rs
static/: index.html
tests/: e2e.rs  http.rs
