[package]
name = "triage-tool"
version = "0.1.0"
edition = "2021"
description = "Fullscreen image triage tool for ComfyUI output (keep/trash via rename(2))"

[[bin]]
name = "triage-tool"
path = "src/main.rs"

[[bin]]
name = "gen_fixtures"
path = "src/bin/gen_fixtures.rs"

[dependencies]
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "signal", "sync"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
png = "0.18.1"
mime_guess = "2.0.5"
tower-http = { version = "0.6.11", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.27.0"
tower = { version = "0.5.3", features = ["util"] }
