[package]
name = "cull"
version = "0.1.0"
edition = "2021"
description = "Fullscreen triage tool for a directory of images (keep/trash via rename(2))"
license = "MIT"
repository = "https://github.com/junkurihara/cull"

[[bin]]
name = "cull"
path = "src/main.rs"

[[bin]]
name = "gen_fixtures"
path = "src/bin/gen_fixtures.rs"

[dependencies]
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "signal", "sync"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
png = "0.18.1"
# Thumbnail generation for the keep gallery. Features are narrowed to the
# decoders we enumerate (png/jpg/webp) plus the jpeg encoder for output.
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "webp"] }
mime_guess = "2.0.5"
tower-http = { version = "0.7.0", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.27.0"
tower = { version = "0.5.3", features = ["util"] }
